--- a/src/index.html
+++ b/src/index.html
@@ -2,69 +2,66 @@
 <html>
   <head>
     <title>Discofoto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <style>
-      body {
+
+      html, body {
+        background: #000;
         margin: 0;
-        padding-bottom: 3rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        overflow: hidden;
       }
 
       #images {
-        margin: 0;
-        padding: 0;
-      }
-
-      #images > img {
-        padding: 0.5rem 1rem;
-        max-width: 50%;
+        height: 96%;
+        width: 96%;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        margin: 0.5% auto;
       }
 
       .image {
-        margin: 5px;
-        border: 1px solid #ccc;
-        float: left;
-        width: 20%;
-      }
-
-      .image:hover {
-        border: 1px solid #777;
-      }
-
-      .image img {
+        background-size: cover;
         width: 100%;
-        height: auto;
+        height: 100%;
+        cursor: pointer;
       }
 
-      .desc {
-        padding: 15px;
-        text-align: center;
-      }
     </style>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
       socket.on("images", (images) => {
-        console.log("Getting images", images);
-        var list = document.getElementById("images");
-        list.innerHTML = "";
-        // sort list of images by created date
-        images.sort((a, b) => {
-          return new Date(b.created) - new Date(a.created);
+
+        images.reverse().forEach((image, i) => {
+          // check if image is already in the DOM
+          if (document.getElementById(image)) return;
+
+          const imageElement = document.createElement("div");
+          imageElement.id = image;
+          imageElement.classList.add("image");
+          imageElement.style.backgroundImage=`url("${image}")`;
+          imageElement.onclick = () => {
+            console.log('click');
+            window.location.href = image;
+          }
+          document.getElementById("images").appendChild(imageElement);
         });
-        images.forEach((image) => {
-          const { filename } = image;
-          var container = document.createElement("div");
-          container.className = "image";
-          var description = document.createElement("div");
-          description.className = "desc";
-          description.innerHTML = filename;
-          var img = document.createElement("img");
-          img.src = filename;
-          container.appendChild(img);
-          container.appendChild(description);
-          list.appendChild(container);
+
+        // Remove all images that are not in the list
+        const imagesInDOM = document.querySelectorAll(".image");
+        imagesInDOM.forEach((image) => {
+          if (!images.includes(image.id)) {
+            image.remove();
+          }
         });
+
       });
     </script>
   </head>
